# pymol_remote_vscode_plugin

./: .gitignore  .vscodeignore  LICENSE.txt  README.md  environment.yml  install.sh  package.json  pyproject.toml
src/: extension.ts
src/pymol_loader/: __init__.py  cli.py  core.py
tools/: pymol_load_wrapper.py
vscode-extension/: package.json  tsconfig.json
vscode-extension/src/: extension.ts
